--- a/Eigen exercises/CMakeLists.txt
+++ b/Eigen exercises/CMakeLists.txt
@@ -5,4 +5,4 @@ project(Eigen_exercises LANGUAGES CXX)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-add_executable(Eigen_exercises main.cpp bmi_lib.h bmi_project.cpp)
+add_executable(Eigen_exercises main.cpp eigen_lib.h eigen_project.cpp)
